[package]
name = "serde_rustler"
description = "Serde Serializer and Deserializer for Rustler NIFs"
version = "0.0.3"
authors = ["Mischief901 <alex.misch@tulip.co>"]
repository = "https://github.com/mischief901/serde_rustler"
categories = ["encoding", "external-ffi-bindings", "serde", "rustler", "elixir"]
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
name = "serde_rustler"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
lazy_static = "1.0"
quick-error = "1.2"
rustler = {git="https://github.com/rusterlium/rustler.git" }
rustler_codegen = {git="https://github.com/rusterlium/rustler.git" }
serde = "1.0"
